# chadscript

./: .prettierrc.json  Cargo.toml  index.ts  license.txt  readme.md
src/: lib.rs  main.rs
